# reg_def

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .ruff.toml  BUILD  MODULE.bazel  WORKSPACE  bazel-bin  bazel-out  bazel-reg_def  bazel-testlogs  c_generator.py  defs.bzl  device_types.py  fix_all.sh  lint_all.sh  pyrightconfig.json  reg_def.py  test_main.c  ti_parser.py
.aspect/cli/: config.yaml
src/: BUILD  c_generator.py  device_types.py  reg_def.py  ti_parser.py
test/: BUILD  test_main.c
tools/format/: BUILD
tools/lint/: BUILD  linters.bzl
