module(
    name = "reg_def",
    version = "0.1.0",
)

bazel_dep(name = "lint_it_all", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "lint_it_all",
    commit = "15209d6476ddf81173e38f609ca6d9df3afa92eb",
    remote = "https://github.com/agoessling/lint_it_all.git",
)

# BEGIN ==================== lint_it_all ====================
lia_http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "aspect_rules_lint", version = "1.0.0-rc7", dev_dependency = True)
archive_override(
    module_name = "aspect_rules_lint",
    integrity = "sha256-ndmyATkHCmQ0ZEZ3iRrfMzYTx5z7D8DerVvk9j+90Ag=",
    patch_strip = 1,
    patches = [
        "third_party/rules_lint/0001-C-support.patch",
        "third_party/rules_lint/0001-Remove-cxxopt-flags-when-linting-C-sources.patch",
        "third_party/rules_lint/0001-Update-bazel-lib.patch",
    ],
    strip_prefix = "rules_lint-1.0.0-rc7",
    urls = "https://github.com/aspect-build/rules_lint/releases/download/v1.0.0-rc7/rules_lint-v1.0.0-rc7.tar.gz",
)

bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "17.0.6")
use_repo(llvm, "llvm_toolchain_llvm")

lia_http_archive(
    name = "ruff",
    build_file_content = "exports_files(['ruff'])",
    sha256 = "072370a5a3f72decdb0039a8c23c89a6982459fac128a368266d0b03933095ce",
    strip_prefix = "ruff-i686-unknown-linux-gnu",
    url = "https://github.com/astral-sh/ruff/releases/download/0.5.5/ruff-i686-unknown-linux-gnu.tar.gz",
)

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
# END ==================== lint_it_all ====================
